--- a/style.css
+++ b/style.css
@@ -416,23 +416,49 @@ body{background-color: rgb(99,0,0);
     .cinco a:hover{color: #640808;}
     .seis  a:hover{color: #640808;}
     
+
 .pie  {
-	
 	text-align: center;
-    background:#000;
-    color: azure;
+    background:rgba(0, 0, 0, 0.699);
+    color: rgba(255,255,255,0.7);
     width: 100%;
-    height: 40px;
+    height: 200px;
     padding-top: 10px;
     text-decoration: none;
 }
 
-.final{
-	 
-	text-decoration: none;
-    color: #fff;
+.final {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.863);
+    font-size: 15px;
 }
 
+.final a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.863);
+    font-size: 15px;
+}
+
+.lista {
+    list-style-type: none;
+    margin-block-start: 1em;
+    margin-inline-start: 120px;
+    margin-bottom: 40px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    
+}
+
+.default {
+    color: rgba(255,255,255,0.7);
+    display: inline-flex;
+    flex-direction:row;
+    text-decoration: none;
+    align-items: center;
+    margin: 1rem 0;
+    width: 50%;
+    
+}
 
 .ver{   
 	
@@ -455,7 +481,7 @@ body{background-color: rgb(99,0,0);
 
    }
 
-.ver:hover{background-color: #fff;}
+
 
 .linkconte {
  
